--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.2.4",
     "react-scripts": "4.0.3",
+    "underscore": "^1.13.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
