--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
