--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 src/config.js
 .package-lock.json
-
+.env
 
 # dependencies
 /node_modules
