--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formik": "^2.2.6",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
+    "node-env-run": "^4.0.2",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.2.4",
@@ -32,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon server.js"
+    "server": "npx nodemon server -w"
   },
   "eslintConfig": {
     "extends": [
